# bounce

./: .gitignore  lamp.json  pyproject.toml
components/api/: app.py  pyproject.toml
helm/bounce/: Chart.yaml
helm/bounce/templates/api/: _nginx.conf.tpl  deploy.yaml  edge.yaml  service.yaml
helm/bounce/values/: values.KDEV.yaml  values.KPROD.yaml  values.KSTAG.yaml
